# cookiecutter-cpp-cmake-conan

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  docker_test.yml  pre-commit-autoupdate.yml
hooks/: post_gen_project.py
tests/: supported_combinations.py  test_cookiecutter_generation.py
{{cookiecutter.project_slug}}/: CMakeLists.txt  README.md  README_dependencies.md  README_docker.md  conanfile.txt
{{cookiecutter.project_slug}}/.devcontainer/: .bashrc  .dockerignore  .inputrc  .vimrc  Dockerfile  devcontainer.json
{{cookiecutter.project_slug}}/.devcontainer/dockerhub/: devcontainer.json
{{cookiecutter.project_slug}}/.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml
{{cookiecutter.project_slug}}/configured_files/: CMakeLists.txt  config.hpp.in
{{cookiecutter.project_slug}}/src/: CMakeLists.txt  main.cpp
{{cookiecutter.project_slug}}/test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
